syntax = "proto3";
package provenance.escrow.v1;

option go_package = "github.com/provenance-io/provenance/x/escrow";

option java_package        = "io.provenance.escrow.v1";
option java_multiple_files = true;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

// AccountEscrow associates an address with an amount.
message AccountEscrow {
  // address is the account address that holds the funds in escrow.
  string address = 1;
  // amount is the balances that are in escrow for the address.
  repeated cosmos.base.v1beta1.Coin amount = 2
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}